--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <div class="next"></div>
       <div class="thumbnails"></div>
     </div>
-  </div>
+  </div> 
+    <div class="buttons">
+      <button class="btn" id="start">Start</button>
+      <button class="btn" id="stop">Stop</button>
+    </div>
+  
 
   <script src="js/main.js"></script>
 </body>
