feat: bottone loop al contrario

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </div> 
     <div class="buttons">
       <button class="btn" id="start">Start</button>
+      <button class="btn" id="start-reverse">start reverse</button>
       <button class="btn" id="stop">Stop</button>
     </div>
   
